# iperf3-python

./: .travis.yml  README.rst  pyproject.toml
examples/: client.py  server.py  udp_client.py
iperf3/: iperf3.py
src/iperf/iperf3/: __init__.py  _iperf3.py  client.py  server.py  test_result.py
tests/: test_iperf3.py
